--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 :root {
-  --background: #;
+  --background:
 }
 
 *, *::before, *::after {
@@ -115,7 +115,7 @@ nav li {
 }
 
 nav a {
-  color: black;
+  color: rgb(230, 207, 207);
   text-decoration: none;
   font-size: 1.2rem;
   text-transform: uppercase;
@@ -370,8 +370,7 @@ footer p {
 
 html {
   height: 100%;
-  background: linear-gradient(114.95deg, rgba(235, 0, 255, 0.5) 0%, rgba(0, 0, 0, 0) 38.87%), linear-gradient(180deg, #004B5B 0%, #FFA7A7 100%), linear-gradient(244.35deg, #FFB26A 0%, #3676B1 50.58%, #00A3FF 100%), linear-gradient(244.35deg, #FFFFFF 0%, #007089 49.48%, #FF005C 100%), radial-gradient(100% 233.99% at 0% 100%, #6D3B00 0%, #8FFF00 100%), linear-gradient(307.27deg, #219D87 0.37%, #93C32E 50.19%, #2800C6 100%), radial-gradient(100% 140% at 100% 0%, #FF00C7 0%, #006C7A 49.48%, #760000 100%);
-  background-blend-mode: hard-light, overlay, overlay, overlay, difference, difference, normal;
+  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
   overflow: hidden;
 }
 
