--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-*, *::before, *::after {
-
-}
-
 h1.logo {
   color: #e6cfcf;
   font-weight: normal;
@@ -54,11 +50,11 @@ header {
   border-radius: 2px;
   position: relative;
  /* Add transitions for smoother animation */
- transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
     
-    left: 0%;
-    transform: rotateZ(0deg);
-    transform-origin: left top;
+  left: 0%;
+  transform: rotateZ(0deg);
+  transform-origin: left top;
 }
 
 .nav-toggle-label span{
@@ -69,9 +65,9 @@ header {
   border-radius: 2px;
   position: relative;
  /* Add transitions for smoother animation */
- transition: transform 0.3s ease-in-out;
- position: absolute;
- cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+  position: absolute;
+  cursor: pointer;
 }
 
 .nav-toggle-label span::after {
@@ -279,11 +275,15 @@ body {
   .book-item {
     width: 100%;
     margin-bottom: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .book-item img {
-    width: 100% !important;
+    width: 200% !important;
     height: auto;
+    justify-self: center;
   }
 }
 
@@ -325,20 +325,55 @@ body {
   padding: 20px;
   margin: 20px 0;
   display: flexbox;
+  text-align: center;
 }
+
+
+
 .book-list {
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
 }
+
+.book-box h1 {
+  font-family: 'Tilt Neon', cursive;
+  font-size: 40px;
+  font-weight: normal;
+  text-align: center;
+  margin-bottom: 20px;
+  position: relative;
+  display: inline-block;
+}
+
+.book-box h1::before {
+  content: '';
+  display: block;
+  height: 5px;
+  background: #e6cfcf;
+  position: absolute;
+  bottom: 0em;
+  left: 0;
+  right: 0;
+  transform: scale(0, 1);
+  border-radius: 5px;
+  transition: transform ease-in-out 250ms;
+}
+
+.book-box h1:hover::before {
+  transform: scale(1, 1);
+}
+
 .book-item {
   width: calc(33.33% - 40px);
   margin-bottom: 20px;
   text-align: center;
 }
+
 .book-item img {
   width: 50%;
   height: auto;
+  border-radius: 15px;
   transition: transform 0.3s ease-in-out;
 }
 
@@ -347,24 +382,39 @@ body {
 }
 
 footer {
+  display: grid;
   font-family: 'Tilt Neon', cursive;
   background-color: #333;
   color: #fff;
   padding: 20px 0;
-  text-align: center;
   margin-top: auto;
 }
 
-footer p {
-  margin: 0;
-  font-size: 14px;
+.footer-container {
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+}
+
+.footer {
+  display: flex;
+  justify-content: flex-end;
+}
+
+footer h3 {
+  font-size: 20px;
+  font-weight: normal;
+  margin-left: 30px;
 }
 
 .footer-links {
+  display: flex;
+  justify-content: flex-end;
+  justify-self: flex-end;
   list-style: none;
-  margin: 10px 0 0;
-  padding: 0;
+  margin-left: auto;
 }
+
 
 .footer-links li {
   display: inline-block;
@@ -372,7 +422,7 @@ footer p {
 }
 
 .footer-links li:last-child {
-  margin-right: 0;
+  margin-right: 20px;
 }
 
 .footer-links a {
@@ -383,11 +433,11 @@ footer p {
 }
 
 .footer-links a:hover {
-  color: #ff6600;
+  color: #b586ef;
 }
 
 html {
-  background: linear-gradient(114.95deg, rgba(235, 0, 255, 0.5) 0%, rgba(0, 71, 255, 0) 34.35%), linear-gradient(180deg, #004B5B 0%, #FFA7A7 100%), linear-gradient(244.35deg, #FFB26A 0%, #3676B1 50.58%, #00A3FF 100%), linear-gradient(244.35deg, #FFFFFF 0%, #004A74 49.48%, #FF0000 100%), radial-gradient(100% 233.99% at 0% 100%, #B70000 0%, #AD00FF 100%), linear-gradient(307.27deg, #219D87 0.37%, #2650BA 50.19%, #2800C6 100%), radial-gradient(100% 140% at 100% 0%, #FF00C7 0%, #006C7A 49.48%, #760000 100%);
+  background: linear-gradient(114.95deg, rgba(235, 0, 255, 0.5) 0%, rgba(0, 71, 255, 0) 34.35%), linear-gradient(180deg, #004B5B 0%, #FFA7A7 100%), linear-gradient(244.35deg, #FFB26A 0%, #3676B1 50.58%, #00A3FF 100%), linear-gradient(244.35deg, #FFFFFF 0%, #004A74 49.48%, #FF0000 100%), radial-gradient(100% 233.99% at 0% 100%, #B70000 0%, rgb(174, 0, 255) 100%), linear-gradient(307.27deg, #219D87 0.37%, #2650BA 50.19%, #2800C6 100%), radial-gradient(100% 140% at 100% 0%, #FF00C7 0%, #006C7A 49.48%, #760000 100%);
   background-blend-mode: hard-light, overlay, overlay, overlay, difference, difference, normal;
   overflow: auto;
 }
