--- a/contact&book.css
+++ b/contact&book.css
@@ -2,7 +2,7 @@
 label {
   display: block;
   margin-bottom: 5px;
-  font-weight: bold;
+  font-weight: ;
 }
 
 /* Style the form inputs */
@@ -10,14 +10,15 @@ input[type="text"],
 input[type="email"],
 input[type="tel"],
 textarea {
-  display: block;
-  width: 100%;
+  display: flex;
+  width: 80%;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
   margin-bottom: 10px;
 }
+
 
 /* Style the form select */
 select {
@@ -40,26 +41,72 @@ input[type="radio"] {
 /* Style the form submit and reset buttons */
 input[type="submit"],
 input[type="reset"] {
-  background-color: #4CAF50;
+  font-family:  "RaleWay", sans-serif;
+  background-color: #f977ce;
+  background-image: linear-gradient(315deg, #f977ce 0%, #c373f2 74%);
   color: white;
   padding: 10px 20px;
   border: none;
-  border-radius: 4px;
+  border-radius: 15px;
   cursor: pointer;
 }
 
 input[type="submit"]:hover,
 input[type="reset"]:hover {
-  background-color: #45a049;
+  background-color: #d387ab;
+  background-image: linear-gradient(315deg, #d387ab 0%, #b279a7 74%);
 }
 
 /* Style the form container */
 form {
-    color: black;
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #f2f2f2;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  width: 850px;
+  margin: auto;
+  margin-bottom: 10px;
+  padding: 50px;
+  border-radius: 5px;
+  background-color: rgb(0, 0, 0, 0.3);
 }
+
+/* Display the contact preference checkboxes and newsletter radios on the same line */
+label[for="email-preference"],
+label[for="phone-preference"],
+label[for="yes-newsletter"],
+label[for="no-newsletter"] {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+/* Display the name and email labels on the same line */
+.name-email-container {
+  display: flex;
+  flex-direction: row;
+  justify-self: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+  gap: 20px;
+}
+
+@media (max-width: 992px) {
+  form {
+    width: auto;
+  }
+  .name-email-container {
+    display: grid;
+    flex-direction: column;
+
+  }
+  input[type="text"],
+  input[type="email"],
+  textarea {
+    width: 100%;
+  }
+
+  input[type="submit"],
+  input[type="reset"] {
+    margin-top: 8px;
+    width: 100%;
+  }
+}
+  
+
+
