--- a/styles.css
+++ b/styles.css
@@ -214,7 +214,7 @@ nav a:hover {
 }
 /* Animate the burger icon to a close icon when the menu is open */
 .nav-toggle:checked ~ .nav-toggle-label span{
-  background: rgb(27, 28, 30);
+  background: transparent;
   display: block;
 }
 
@@ -312,11 +312,6 @@ body {
   transition: transform 0.3s;
 }
 
-/* Hide the checkbox visually */
-.toggle-nav {
-  display: none;
-}
-
 .nav-links {
   display: flex;
   align-items: center;
@@ -399,6 +394,15 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
+}
+
+.video-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 12px;
 }
 
 footer {
