--- a/contact&book.css
+++ b/contact&book.css
@@ -116,6 +116,7 @@ label[for="no-newsletter"] {
   display: flex;
   flex-direction: row;
   align-items: center;
+  background-color: rgb(0, 0, 0, 0.3);
 }
 
 
@@ -123,7 +124,7 @@ label[for="no-newsletter"] {
 .product-images {
   display: flex;
   align-items: center;
-  width: calc(60% - 40px);
+  width: 50%;
   flex: 1 1 60%;
   margin-left: 5%;
 }
@@ -141,20 +142,74 @@ label[for="no-newsletter"] {
   display: flex;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .small-images img {
-  width: 20px;
+  width: 20%;
   margin-bottom: 10px;
-  flex-direction: row;
 }
 
 .product-details {
   padding: 0 20px;
-  text-align: center;
-  width: 40%; 
+  width: 50%; 
 }
+
+.fa-cart-plus{
+  background:#90a2c3;
+}
+
+.addtocart{
+  display:block;
+  padding:0.5em 1em 0.5em 1em;
+  border-radius:100px;
+  border:none;
+  font-size:2em;
+  position:relative;
+  background:#90a2c3;
+  cursor:pointer;
+  height:2em;
+  width:10em;
+  overflow:hidden;
+  transition:transform 0.1s;
+  z-index:1;
+}
+.addtocart:hover{
+  transform:scale(1.1);
+}
+.pretext{
+  color:#fff;
+  background: #90a2c3;
+  position:absolute;
+  top:0;
+  left:0;
+  height:100%;
+  width:100%;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  font-family: "Raleway", sans-serif;
+}
+i{
+  margin-right:10px;
+}
+.done{
+  background:#6bd285;
+  position:absolute;
+  width:100%;
+  top:0;
+  left:0;
+  transition:transform 0.3s ease;
+
+  transform:translate(-110%) skew(-40deg);
+}
+.posttext{
+  background: #6bd285;
+}
+.fa-check{
+  background:#6bd285;
+}
+
 
 .breadcrumbs {
   list-style: none;
