added justification for paragraphs

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,11 @@ html {
   overflow: auto;
 }
 
+p {
+  text-align: justify;
+  text-justify: inter-word;
+}
+
 /* Styling Links */
 a {
   text-decoration: none;
